@@ -90,6 +90,8 @@ version 0.60:
 	* DCC File Receive support for IRC
 	* File receive support for Jabber (Thanks, Nathan Walp)
 	* File send/receive support for Oscar (Thanks, William T. Mahan)
+	* Option to have AIM over oscar notify you if you have 
+	  unread mail (Thanks, Mark Doliner)
 
 version 0.59 (06/24/2002):
 	* Hungarian translation added (Thanks, Sutto Zoltan)
